# Qoraal

./: .gitignore  CMakeLists.txt  Makefile  README.md  qoraal.mk  runme.sh
include/qoraal/: config.h  debug.h  os.h  os_static.h  qoraal.h
include/qoraal/common/: dictionary.h  strsub.h
include/qoraal/example/: console.h
include/qoraal/svc/: svc_logger.h  svc_services.h  svc_shell.h  svc_tasks.h
src/: CMakeLists.txt  debug.c  os.c  os_mlock.c  os_posix.c  qoraal.c  qshell_cmds.txt
src/common/: dictionary.c  mlog.c  rtclib.c  strsub.c
src/example/: console.c  platform.c
src/qshell/: posixcmd.c  servicescmd.c
src/svc/: svc_events.c  svc_logger.c  svc_services.c  svc_shell.c  svc_tasks.c  svc_wdt.c
test/: CMakeLists.txt  demo.c  main.c  main.h  main_demo.c  main_system.c  runme.sh  services.h  shell.c  system.c
test/platform/: platform.c  platform.h
test/services/: demo.c  system.c
